tests/ui/consts/const-eval/const-eval-overflow-4.stderr
error[E0080]: attempt to compute `i8::MAX + 1_i8`, which would overflow
  --> $DIR/const-eval-overflow-4.rs:11:13
   |
LL |     : [u32; (i8::MAX as i8 + 1i8) as usize]
   |             ^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
